--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-index.html
-src/config.js
+# index.html
+# src/config.js
 # Editor directories and files
 .idea
 .vscode
