--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.1.0",
     "@vue/runtime-core": "^3.2.47",
     "less": "^4.1.3",
     "typescript": "^5.0.4",
     "unplugin-vue-define-options": "^1.3.3",
+    "vite": "^4.2.1",
+    "vite-plugin-dts": "1.4.1",
     "vue": "^3.2.36"
   }
 }
