--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/gulp": "^4.0.10",
     "@types/node": "^18.15.11",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vue/runtime-core": "^3.2.47",
+    "gulp": "^4.0.2",
     "less": "^4.1.3",
+    "sucrase": "^3.32.0",
     "typescript": "^5.0.4",
     "unplugin-vue-define-options": "^1.3.3",
     "vite": "^4.2.1",
