--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:biu": "gulp -f packages/components/script/build/index.ts"
+    "build:biu": "gulp -f packages/components/script/build/index.ts",
+    "publish:biu": "gulp -f packages/components/script/publish/index.ts"
   },
   "keywords": [],
   "author": "",
