--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-less": "^5.0.0",
     "less": "^4.1.3",
+    "release-it": "^15.10.1",
     "sucrase": "^3.32.0",
     "typescript": "^5.0.4",
     "unplugin-vue-define-options": "^1.3.3",
